# PHA

./: README.md  api.md  check_connections.py  debug_query_generator.py  debug_snowflake.py  debug_snowflake_structure.py  demo_selective_quoting.py  pyproject.toml  query_generation_optimizer.py  query_validator.py  queryorprompt toauggies.md  simple_test.py  test_api_endpoint.py  test_api_selective_quoting.py  test_app.py  test_bedrock_debug.py  test_bedrock_simple.py  test_columns.py  test_comprehensive_generation.py  test_cross_database_quoting.py  test_dashboard_complete.py  test_dashboard_endpoints.py  test_dashboard_logic.py  test_db_connection.py  test_direct_query.py  test_enhanced_cleaning.py  test_enhanced_snowflake.py  test_failing_scenario.py  test_final_api_update.py  test_final_endpoint.py  test_healthcare_tables.py  test_patient_query.py  test_prompt_logic.py  test_query_generation_fixed.py  test_requests.py  test_reserved_words.py  test_selective_quoting.py  test_simple_endpoint.py  test_simple_snowflake_queries.py  test_snowflake.py  (+3 more)
backend/: .env  .env.example  .env.template  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  BEDROCK_QUERY_FLOW.md  COMPLETE_API_TESTING_GUIDE.md  DEPLOYMENT.md  ENDPOINT TESTING GUIDE.md  EPIC_SANDBOX_TESTING_GUIDE.md  FHIR_ENDPOINTS_TESTING_DATA.md  FHIR_INTEGRATION_GUIDE.md  FHIR_INTEGRATION_PLAN.md  FHIR_SYSTEM_DOCUMENTATION.md  FINAL_FLOW_SUMMARY.md  IMPROVED_ARCHITECTURE.md  QUICK_TESTING_GUIDE.md  README.md  TESTING.md  cli_client.py  main.py  pyproject.toml  requirements.txt  simple_test.py  start.bat  test_fhir.py  test_healthcare_api.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: connection.py  fhir_app.py  fhir_client.py
backend/app/routers/: connections.py  fhir_connections.py  healthcare_query.py  healthcare_query_clean.py  mongodb_schema.py  mongodb_schema_fixed.py  query_generator.py
backend/app/schemas/: connection.py  fhir.py
backend/app/services/: bedrock_service.py  connection_service.py  fhir_service.py  schema_extraction_service.py
backend/tests/: test_connections.py
docs/: CODEBASE_REVIEW.md  README.md
docs/development/: architecture.md  enhanced_query_system_reference.md  migration.md  mongodb-connection-testing.md
scripts/: start.py  test.py
src/: main.py  test.py  tools.py
src/agent_spinner/: bedrock_chatbot.py  mcp_server.py  router.py
src/api/: agents.py  cerner_router.py  cerner_tools.py  connections.py  custom_query.py  dashboard.py  epic_router.py  epic_tools.py  healthcare.py  routes.py
src/connector_fhir/: cerner.py  epic.py
src/core/: config.py
src/db/: auth.py  dashboard_db.py  session.py
src/models/: connection.py  dashboard.py
src/pha/: main.py
src/pha/api/: routes.py
src/prompt/: prompt.py  prompt_sql.py  prompts.py
src/schemas/: connection.py  custom_query.py  database_operations.py  healthcare.py  schema.py
src/services/: agent_services.py  bedrock_service.py  cerner.py  connection_service.py  custom_query_service.py  dashboard_service.py  database_operation_service.py  dynamic_query_generator.py  epic.py  schema_extraction_service.py
src/utils/: aws.py  cerner.py  chunking.py  epic.py  formatter_fhir.py  helpers.py
tests/fixtures/: test_healthcare_ui.html  (+1 more)
(+21 files in other folders)
