[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "pymongo>=4.14.1",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.35.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
]
